--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.jpa.hibernate.ddl.auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/juegos?useSSL=false&serverTimezone=UTC
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-plataform=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/julio?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=julio094@
-spring.jpa.database-plataform=org.hibernate.dialect.MySQL8Dialect
