--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,17 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-plataform=org.hibernate.dialect.MySQL8Dialect
-spring.datasource.url=jdbc:mysql://localhost:3306/julio?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=julio094@
+spring.datasource.url=jdbc:mysql://us2q3nj1rnty2wsm:ZemFjhkXPLlw1rB7ucaH@bz0lldczyihwo0qihmo5-mysql.services.clever-cloud.com:3306/bz0lldczyihwo0qihmo5?useSSL=false&serverTimezone=UTC
+spring.datasource.username=us2q3nj1rnty2wsm
+spring.datasource.password=ZemFjhkXPLlw1rB7ucaH
+
+
+
+
+
+
+
+
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/julio?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=julio094@
